--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -170,26 +170,32 @@ include(CheckLibraryExists)
 check_library_exists(m sqrt "" HAVE_LIBM)
 
 # generate configuration for this system
+#configure_file(
+#    ${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-config-common.h.cmake
+#    ${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-config-common.h
+#)
+
+# generate configuration for this system
 configure_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-config-common.h.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-config-common.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/sbml/xml/common/libsbxml-config-common.h.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/sbml/xml/common/libsbxml-config-common.h
 )
 
 # Replace: @PACKAGE_VERSION@ and @LIBSBML_VERSION_NUMERIC@
-configure_file (
-  "${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-version.h.cmake"
-  "${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-version.h"
-)
+#configure_file (
+#  "${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-version.h.cmake"
+#  "${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-version.h"
+#)
 
-configure_file (
-  "${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-namespace.h.cmake"
-  "${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-namespace.h"
-)
+#configure_file (
+#  "${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-namespace.h.cmake"
+#  "${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-namespace.h"
+#)
 
-configure_file (
-  "${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-package.h.cmake"
-  "${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-package.h"
-)
+#configure_file (
+#  "${CMAKE_CURRENT_SOURCE_DIR}/sbml/common/libsbml-package.h.cmake"
+#  "${CMAKE_CURRENT_BINARY_DIR}/sbml/common/libsbml-package.h"
+#)
   
 ###############################################################################
 #
