Eliminate the non-xml tests.

--- a/src/sbml/CMakeLists.txt
+++ b/src/sbml/CMakeLists.txt
@@ -37,14 +37,13 @@
 # 
 if(WITH_CHECK)
 
-  add_subdirectory(annotation/test)
-  add_subdirectory(conversion/test)
-  add_subdirectory(extension/test)
-  add_subdirectory(math/test)
-  add_subdirectory(test)
-  add_subdirectory(units/test)
-  add_subdirectory(util/test)
-  add_subdirectory(validator/test)
+#  add_subdirectory(annotation/test)
+#  add_subdirectory(conversion/test)
+#  add_subdirectory(extension/test)
+#  add_subdirectory(test)
+#  add_subdirectory(units/test)
+#  add_subdirectory(util/test)
+#  add_subdirectory(validator/test)
   add_subdirectory(xml/test)
 
 endif()
