Port enough of SBMLNamespaces to pass all tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -467,6 +467,11 @@ if(WITH_XERCES)
 
 endif(WITH_XERCES)
 
+# Add SBMLNamespaces until the reserved namespace mechanism is replaced
+set(XML_SOURCES ${XML_SOURCES}
+	sbml/xml/SBMLNamespaces.cpp
+	)
+
 source_group(xml FILES ${XML_SOURCES})
 set(LIBSBML_SOURCES ${LIBSBML_SOURCES} ${XML_SOURCES})
 
